# go-shoppings

./: .air.toml  .dockerignore  .env.example  .gitignore  CODE_GENERATION_PROMPT.md  DEPLOYMENT.md  Dockerfile  Makefile  SAAS微信商城系统设计文档.md  SETTLEMENT_AI_DESIGN.md  SUPABASE_SETUP.md  docker-compose.app.yml  docker-compose.deploy.yml  docker-compose.infra.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: deploy-backend.yml
ai-image-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-image-service/app/: main.py
cmd/api/: main.go
cmd/worker/: main.go
configs/: config.yaml
gateway/: nginx.conf
internal/handler/: payment.go  router.go
internal/model/: after_sale.go  api_token.go  cart.go  coupon.go  delivery.go  distribution.go  groupon.go  member.go  order.go  payment.go  platform.go  points_setting.go  product.go  seckill.go  settings.go  sms.go  system.go  types.go  types_test.go
internal/repository/: after_sale_repo.go  api_token_repo.go  base_repo.go  cart_repo.go  db_accessors.go  delivery_repo.go  distribution_repo.go  groupon_repo.go  member_level_repo.go  member_repo.go  order_repo.go  payment_repo.go  plan_feature_repo.go  plan_repo.go  platform_ops_repo.go  platform_settings_repo.go  points_settings_repo.go  product_repo.go  region_repo.go  seckill_repo.go  settings_repo.go  sms_repo.go  tenant_repo.go  tenant_subscription_order_repo.go  upload_repo.go
internal/service/: features.go  (+12 more)
scripts/: demo_storefront.sql  init_db.sql  manual_catalog_products_fix.sql  manual_runtime_flow_tables_fix.sql  seed.sql
(+103 files in other folders)
