[project]
name = "go-shoppings-ai-image-service"
version = "0.1.0"
description = "AI image generation adapter for go-shoppings admin image uploads."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uvicorn]
factory = false
